content/_generated-doc/2.7/config/quarkus-liquibase-liquibase-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-liquibase-liquibase-runtime-config_configuration]]link:#quarkus-liquibase-liquibase-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.migrate-at-start]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.migrate-at-start[quarkus.liquibase.migrate-at-start]`

[.description]
--
`true` to execute Liquibase automatically when the application starts, `false` otherwise.
--|boolean 
|`false`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.validate-on-migrate]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.validate-on-migrate[quarkus.liquibase.validate-on-migrate]`

[.description]
--
`true` to validate the applied changes against the available ones, `false` otherwise. It is only used if `migration-at-start` is `true`
--|boolean 
|`true`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.clean-at-start]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.clean-at-start[quarkus.liquibase.clean-at-start]`

[.description]
--
`true` to execute Liquibase clean command automatically when the application starts, `false` otherwise.
--|boolean 
|`false`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.contexts]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.contexts[quarkus.liquibase.contexts]`

[.description]
--
Comma-separated case-sensitive list of ChangeSet contexts to execute for liquibase.
--|list of string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.labels]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.labels[quarkus.liquibase.labels]`

[.description]
--
Comma-separated case-sensitive list of expressions defining labeled ChangeSet to execute for liquibase.
--|list of string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.database-change-log-lock-table-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.database-change-log-lock-table-name[quarkus.liquibase.database-change-log-lock-table-name]`

[.description]
--
The liquibase change log lock table name. Name of table to use for tracking concurrent Liquibase usage.
--|string 
|`DATABASECHANGELOGLOCK`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.database-change-log-table-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.database-change-log-table-name[quarkus.liquibase.database-change-log-table-name]`

[.description]
--
The liquibase change log table name. Name of table to use for tracking change history.
--|string 
|`DATABASECHANGELOG`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.default-catalog-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.default-catalog-name[quarkus.liquibase.default-catalog-name]`

[.description]
--
The name of Liquibase's default catalog.
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.default-schema-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.default-schema-name[quarkus.liquibase.default-schema-name]`

[.description]
--
The name of Liquibase's default schema. Overwrites the default schema name (returned by the RDBMS) with a different database schema.
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.liquibase-catalog-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.liquibase-catalog-name[quarkus.liquibase.liquibase-catalog-name]`

[.description]
--
The name of the catalog with the liquibase tables.
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.liquibase-schema-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.liquibase-schema-name[quarkus.liquibase.liquibase-schema-name]`

[.description]
--
The name of the schema with the liquibase tables.
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.liquibase-tablespace-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.liquibase-tablespace-name[quarkus.liquibase.liquibase-tablespace-name]`

[.description]
--
The name of the tablespace where the -LOG and -LOCK tables will be created (if they do not exist yet).
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.change-log-parameters-change-log-parameters]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.change-log-parameters-change-log-parameters[quarkus.liquibase.change-log-parameters]`

[.description]
--
Map of parameters that can be used inside Liquibase changeLog files.
--|`Map<String,String>` 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.migrate-at-start]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.migrate-at-start[quarkus.liquibase."named-data-sources".migrate-at-start]`

[.description]
--
`true` to execute Liquibase automatically when the application starts, `false` otherwise.
--|boolean 
|`false`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.validate-on-migrate]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.validate-on-migrate[quarkus.liquibase."named-data-sources".validate-on-migrate]`

[.description]
--
`true` to validate the applied changes against the available ones, `false` otherwise. It is only used if `migration-at-start` is `true`
--|boolean 
|`true`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.clean-at-start]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.clean-at-start[quarkus.liquibase."named-data-sources".clean-at-start]`

[.description]
--
`true` to execute Liquibase clean command automatically when the application starts, `false` otherwise.
--|boolean 
|`false`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.contexts]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.contexts[quarkus.liquibase."named-data-sources".contexts]`

[.description]
--
Comma-separated case-sensitive list of ChangeSet contexts to execute for liquibase.
--|list of string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.labels]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.labels[quarkus.liquibase."named-data-sources".labels]`

[.description]
--
Comma-separated case-sensitive list of expressions defining labeled ChangeSet to execute for liquibase.
--|list of string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.change-log-parameters-change-log-parameters]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.change-log-parameters-change-log-parameters[quarkus.liquibase."named-data-sources".change-log-parameters]`

[.description]
--
Map of parameters that can be used inside Liquibase changeLog files.
--|`Map<String,String>` 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.database-change-log-lock-table-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.database-change-log-lock-table-name[quarkus.liquibase."named-data-sources".database-change-log-lock-table-name]`

[.description]
--
The liquibase change log lock table name. Name of table to use for tracking concurrent Liquibase usage.
--|string 
|`DATABASECHANGELOGLOCK`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.database-change-log-table-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.database-change-log-table-name[quarkus.liquibase."named-data-sources".database-change-log-table-name]`

[.description]
--
The liquibase change log table name. Name of table to use for tracking change history.
--|string 
|`DATABASECHANGELOG`


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.default-catalog-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.default-catalog-name[quarkus.liquibase."named-data-sources".default-catalog-name]`

[.description]
--
The name of Liquibase's default catalog.
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.default-schema-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.default-schema-name[quarkus.liquibase."named-data-sources".default-schema-name]`

[.description]
--
The name of Liquibase's default schema. Overwrites the default schema name (returned by the RDBMS) with a different database schema.
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.liquibase-catalog-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.liquibase-catalog-name[quarkus.liquibase."named-data-sources".liquibase-catalog-name]`

[.description]
--
The name of the catalog with the liquibase tables.
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.liquibase-schema-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.liquibase-schema-name[quarkus.liquibase."named-data-sources".liquibase-schema-name]`

[.description]
--
The name of the schema with the liquibase tables.
--|string 
|


a| [[quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.liquibase-tablespace-name]]`link:#quarkus-liquibase-liquibase-runtime-config_quarkus.liquibase.-named-data-sources-.liquibase-tablespace-name[quarkus.liquibase."named-data-sources".liquibase-tablespace-name]`

[.description]
--
The name of the tablespace where the -LOG and -LOCK tables will be created (if they do not exist yet).
--|string 
|

|===